Build during initialization and export default substrate node port

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,10 @@
 # Commands to start on workspace startup
-# tasks:
-#   - init: yarn install
-#     command: yarn build
+tasks:
+   - before: source ~/.cargo/env 
+     init: cargo build --release
 # Ports to expose on workspace startup
-# ports:
-#   - port: 8000
+ports:
+   - port: 9944
 #     onOpen: open-preview
 
 image:
